--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@types/nprogress": "^0.2.3",
+    "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "nprogress": "^0.2.0",
     "react": "19.2.3",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "sass": "^1.97.3"
